# BAREKAT-Big-Data-Analytics-in-Health

./: .env.example  .env.production.example  .env.staging.example  .gitignore  DATA  Makefile  README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.secure.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements-spark.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
dashboards/: app.py
dashboards/pages/: admissions.py  alerts.py  compliance.py  diagnoses.py  imaging.py  infrastructure.py  laboratory.py  medications.py  ml_insights.py  overview.py  patients.py  reports.py  tenant_admin.py
dashboards/utils/: auth.py  charts.py  data_loader.py  db_loader.py  imaging_loader.py  live_alerts.py  ml_analytics.py  (+2 more)
scripts/: apply_init_sql.py  apply_migrations.py  generate_data.py  generate_sample_dicom.py  generate_tls_certs.sh  setup_secrets.sh  simulate_stream.py  spark_lake_batch.py
secrets/: .gitignore
tests/: conftest.py  test_alerts.py  test_anonymizer.py  test_auth_db.py  test_compliance.py  test_data_lake.py  test_etl.py  test_etl_fixes.py  test_explainability.py  test_fhir_interop.py  test_fhir_normalizer.py  test_fhir_parser.py  test_fhir_profiles.py  test_imaging_cad.py  test_imaging_metadata.py  test_imaging_thumbnail.py  test_incremental.py  test_ingestion.py  test_metrics.py  test_mfa.py  test_migrations.py  test_observability.py  test_phi_crypto.py  test_regressor_metrics.py  test_reports_notifications.py  test_secrets.py  test_stream_processors.py  test_tenant.py  test_thresholds.py
(+146 files in other folders)
