[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barekat"
version = "0.1.0"
description = "BAREKAT - Big Data Analytics in Health Platform"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"dashboards/app.py" = ["E402"]
"dashboards/pages/diagnoses.py" = ["F841"]
"dashboards/pages/infrastructure.py" = ["F401", "F841"]
"scripts/generate_data.py" = ["F401"]
"scripts/original_DATA.py" = ["F401"]
"tests/test_ingestion.py" = ["F401"]
"tests/test_imaging_*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: integration tests requiring PostgreSQL",
]
addopts = "-m 'not integration'"
